--- a/TrxParser/TrxParser.csproj
+++ b/TrxParser/TrxParser.csproj
@@ -42,8 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Counters.cs" />
+    <Compile Include="Models\Execution.cs" />
+    <Compile Include="Models\Output.cs" />
+    <Compile Include="Models\Results.cs" />
+    <Compile Include="Models\ResultSummary.cs" />
+    <Compile Include="Models\TestDefinitions.cs" />
+    <Compile Include="Models\TestMethod.cs" />
     <Compile Include="Models\TestRun.cs" />
     <Compile Include="Models\Times.cs" />
+    <Compile Include="Models\UnitTest.cs" />
+    <Compile Include="Models\UnitTestResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\TrxFileDeserializer.cs" />
